# spoa-opentracing

./: .gitignore  Dockerfile  README  README.md  configure.ac
include/: include.h
include/common/: debug.h  define.h  version.h.in
include/proto/: libev.h  opentracing-scope.h  opentracing.h  spoa-message.h  spoa.h  spoe-decode.h  spoe-encode.h  spoe.h  spop-ack.h  spop-disconnect.h  spop-hello.h  spop-notify.h  spop-unset.h  tcp.h  util.h  worker.h
include/types/: libev.h  main.h  opentracing-scope.h  opentracing.h  spoa-message.h  spoa.h  spoe-decode.h  spoe-encode.h  spoe.h  tcp.h  util.h  worker.h
m4/: am-common.m4  am-enable-threads.m4  am-host.m4  am-with-libev.m4  am-with-opentracing-c-wrapper.m4
m4/pkgconfig/: am-with-opentracing-c-wrapper.m4
src/: Makefile.am  libev.c  main.c  opentracing-scope.c  opentracing.c  spoa-message.c  spoa.c  spoe-decode.c  spoe-encode.c  spoe.c  spop-ack.c  spop-disconnect.c  spop-hello.c  spop-notify.c  spop-unset.c  tcp.c  util.c  worker.c
test/: cfg-dd.json  cfg-jaeger.yml  cfg-zipkin.json  haproxy-htx.cfg  haproxy-mw.cfg  haproxy.cfg  spoe.cfg
